Buy both working

--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -31,6 +31,28 @@
     font-family: montserrat;
 }
 
+.more-info:after {
+    background: none repeat scroll 0 0 transparent;
+    /* bottom: 0; */
+    content: "";
+    display: block;
+    height: 1.5px;
+    left: 50%;
+    /* position: absolute; */
+    background: #353535;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
+  .more-info:hover:after { 
+    width: 100%; 
+    left: 0; 
+  }
+.more-info{
+    text-decoration: none;   
+}
+/* .more-info:hover{
+    text-decoration: underline; 
+} */
 /* Shipping Section */
 
 #guarantee{
@@ -191,3 +213,4 @@ footer{
     font-size: large;
     padding-left: 87%;
 }
+
