--- a/main/templates/products/search.html
+++ b/main/templates/products/search.html
@@ -29,15 +29,15 @@
                   <div class="block2-btn-addcart w-size1 trans-0-4">
                     <!-- Button -->
                     <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                      <a href="{% url 'cart_add' product.id %}" style="color: white;">Add To Cart</a>
+                      <a href="{% url 'product' product.id %}" style="color: white;">Add To Cart</a>
                     </button>
                   </div>
                 </div>
               </div>
           
               <div class="block2-txt p-t-20">
-                <a href="{% url 'product' product.id %}" class="block2-name dis-block s-text3 p-b-5 index_a">
-                  {{ product.name }}
+                <a href="{% url 'cart_add' product.id %}" class="block2-name dis-block s-text3 p-b-5 index_a">
+                  <span>{{ product.name }}</span>
                 </a>
                 <br>
                 <span class="block2-price m-text6 p-r-5">
