--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -49,6 +49,7 @@
   }
 .more-info{
     text-decoration: none;   
+    color: #212529;
 }
 /* .more-info:hover{
     text-decoration: underline; 
@@ -212,5 +213,13 @@ footer{
 .total-amount{
     font-size: large;
     padding-left: 87%;
+}
+
+/* Product Description Section */
+
+#productDesc .text-center{
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 0px;
 }
 
