--- a/main/templates/products/product.html
+++ b/main/templates/products/product.html
@@ -10,49 +10,39 @@
         <div class="col-md-12">
           <h1 style="color:black">{{ product.name }}</h1>
           <p class="lead">
-            <i class="fas fa-mobile"></i> {{ product.category }}</p>
+            {% if product.category == 'Smartphone' %}
+            <i class="fas fa-mobile"></i>
+            {% elif product.category == 'Laptops' %}
+            <i class="fas fa-laptop"></i>
+            {% elif product.category == 'Earphones' %}
+            <i class="fas fa-headphones"></i>
+            {% else %}
+            <i class="fab fa-reddit-alien"></i> 
+            {% endif %}
+            {{ product.category }} By {{ product.seller }}</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Breadcrumb -->
-  <section id="bc" class="mt-3">
-    <div class="container">
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="{% url 'index' %}">Home</a>
-          </li>
-          <li class="breadcrumb-item">
-            <a href="{% url 'products' %}">Products</a>
-          </li>
-          <li class="breadcrumb-item active">{{ product.name }}</li>
-        </ol>
-      </nav>
-    </div>
-  </section>
 
-  <!-- Listing -->
-  <section id="listing" class="py-4">
+  <!-- Product Description -->
+  <section id="productDesc" class="py-4">
     <div class="container">
-      <a href="{% url 'products' %}" class="btn btn-light mb-4">Back To Listings</a>
       <div class="row">
-        <div class="col-md-7">
-          <!-- Home Main Image -->
-          <img src="{{ product.image.url }}" alt="" class="img-main img-fluid mb-3"><hr>
-          <!-- Thumbnails -->
+        <div class="col-md-8">
+          <img src="{{ product.image.url }}" alt="" class="img-fluid mb-3"><hr>
           <div class="row mb-5 thumbs">
               {% if product.image_1 %}
             <div class="col-md-2">
-              <a href="{{ product.image_1.url }}" data-lightbox="home-images">
-                <img src="{{ product.image_1.url }}" alt="" class="img-fluid">
+              <a href="{{ product.image_1.url }}">
+                <img src="{{ product.image_1.url }}" alt="" class="img-thumbnail">
               </a>
             </div>
               {% endif %}
               {% if product.image_2 %}
             <div class="col-md-2">
-              <a href="{{ product.image_2.url }}" data-lightbox="home-images">
+              <a href="{{ product.image_2.url }}">
                 <img src="{{ product.image_2.url }}" alt="" class="img-fluid">
               </a>
             </div>
@@ -60,43 +50,43 @@
               
           </div>
           <hr>
-          <!-- Fields -->
-          <div class="row mb-5 fields">
-            <div class="col-md-6">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item text-secondary">
-                  <i class="fas fa-money-bill-alt"></i> Asking Price:
-                  <span class="float-right">Rs.{{ product.price | intcomma }}</span>
-                  
-                </li>
-                
-              </ul>
-            </div>
-            
-          </div>
-
-          <!-- Description -->
-          <div class="row mb-5">
-            <div class="col-md-12">
-               <p> {{ product.specification }}</p>
-            </div>
-          </div>
+          
         </div>
 
-        <div class="col-md-1"></div>
-
-        <div class="col-md-3">
-          <div class="card mb-3">
+        <div class="col-md-4">
+          <div class="card mb-4">
             <div class="card-body">
-              <h5 class="card-title">Product seller</h5>
-              <h6 class="text-secondary">{{ product.seller }}</h6>
+              <h5 class="card-title">About</h5>
+              <p class="card-text">{{ product.specification}}</p>
             </div>
           </div>
-          {% if user.id == None %}
-              <button class="btn-primary btn-block btn-lg" onclick="checkLogin()">BUY PRODUCT!</button>
+          <div class="row text-center">
+            <div class="col-sm-6">
+              <i class="far fa-clock">: </i>
+              <span> {{ seller.delivery_in }}</span>
+            </div>
+            <div class="col-sm-6">
+              <span>Price: ₹ {{ product.price | intcomma }} </span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              {% if user.id == None %}
+              <button class="btn btn-outline-dark form-control" onclick="checkLogin()">Add to Cart</button>
+              {% else %}
+              <button class="btn btn-outline-dark form-control disabled">Added to Cart</button>
+              {% endif %}
+            </div>
+            <div class="col-md-6">
+              {% if user.id == None %}
+              <button class="btn btn btn-dark form-control" onclick="checkLogin()">Checkout</button>
           {% else %}
-              <button class="btn-primary btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">BUY PRODUCT!</button>
+              <button class="btn btn btn-dark form-control" data-toggle="modal" data-target="#inquiryModal">Checkout</button>
           {% endif %}
+            </div>
+           
+          </div>
+          
         </div>
       </div>
     </div>
@@ -108,7 +98,7 @@
       <div class="modal-content">
         <div class="modal-header">
           {% if  suggested_product != None %}
-          <h6 class="modal-title" id="inquiryModalLabel">These Products Are rapidly bought together!</h6>
+          <h6 class="modal-title" id="inquiryModalLabel">Users along with this have also bought</h6>
           {% else %}
           <h6 class="modal-title" id="inquiryModalLabel">Please confirm the purchase!</h6>
           {% endif %}
@@ -120,18 +110,18 @@
           {% if  suggested_product != None %}
           <div class="row">
             <div class="col-md-7">
-              <b><a href="{% url 'product' suggested_product.id %}" target="_blank" >{{ suggested_product.name }}</a></b>
-              <br/><b>Price: ₹{{ suggested_product.price }}</b>
+            <b><a href="{% url 'product' suggested_product.id %}" target="_blank" class="more-info" >{{ suggested_product.name }}</a></b>
+              <br/><b>Price: ₹ {{ suggested_product.price | intcomma }}</b>
             </div>
             <div class="col-md-5">
               <img src="{{ suggested_product.image.url }}" height="100" alt="smx" >
             </div>
           </div>
             <hr>
-            <a href="{% url 'cart_add' suggested_product.id %}"><input type="button" value="Buy Both at ₹{{ product.price|add:suggested_product.price }}" class="btn btn-block btn-secondary"></a>
+            <a href="{% url 'cart_add' suggested_product.id %}"><input type="button" value="Buy Both at ₹ {{ product.price | add:suggested_product.price | intcomma }}" class="btn btn btn-dark form-control"></a>
           <hr>
           {% endif %}
-          <a href="{% url 'cart_detail' %}"><input type="button" value="Buy {{ product.name }} at ₹{{ product.price }}" class="btn btn-block btn-secondary"></a>
+          <a href="{% url 'cart_detail' %}"><input type="button" value="Proceed with checkout" class="btn btn-outline-dark form-control"></a>
         </div>
       </div>
     </div>
