Bug fixes and code cleaning

--- a/main/templates/accounts/register.html
+++ b/main/templates/accounts/register.html
@@ -29,7 +29,7 @@
 						<input class="input100" type="email" name="email" placeholder="Email Id" required>
 						<span class="focus-input100" data-placeholder="&#xf15a;"></span>
 					</div>
-					<!-- Because chutiya Django needs username as part of the object being returned -->
+					<!-- Because Django needs username as part of the object being returned -->
                     <input class="input100" type="hidden" name="username" placeholder="Username" value="nothing">
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
