--- a/main/templates/shoppingcart/cart_display.html
+++ b/main/templates/shoppingcart/cart_display.html
@@ -64,7 +64,7 @@
 
             <div>
                 <form action="{% url 'checkout' %}">
-                    <button type='submit' class="btn btn-outline-dark form-control">
+                    <button type='submit' class="btn btn-dark form-control">
                         Checkout
                     </button>
                 </form>
@@ -74,31 +74,6 @@
     </div>
 </div>
 </section>
-
-<!-- <div class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-r-20 p-lr-15-sm">
-    <div class="flex-w flex-m w-full-sm">
-        <div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-           
-            <a href="{% url 'cart_clear' %}"><button type="button" class="btn btn-outline-dark">
-               <span class="cart">Clear Cart</span> 
-            </button></a>
-        </div>
-           
-    </div>
-    <div class="flex-w flex-m w-full-sm">
-      
-        <br>
-        <form action="{% url 'checkout' %}">
-            <button type='submit' class="btn btn-outline-dark form-control">
-                Checkout
-            </button>
-        </form>
-        </div>
-           
-    </div> -->
-    
-    
-
 
 
 <!--===============================================================================================-->
