Bug fixes and code cleaning

--- a/main/templates/products/search.html
+++ b/main/templates/products/search.html
@@ -36,8 +36,8 @@
               </div>
           
               <div class="block2-txt p-t-20">
-                <a href="{% url 'cart_add' product.id %}" class="block2-name dis-block s-text3 p-b-5 index_a">
-                  <span>{{ product.name }}</span>
+                <a href="{% url 'product' product.id %}" class="block2-name dis-block s-text3 p-b-5 index_a">
+                  <span class="more-info">{{ product.name }}</span>
                 </a>
                 <br>
                 <span class="block2-price m-text6 p-r-5">
