--- a/main/static/css/accounts.css
+++ b/main/static/css/accounts.css
@@ -574,5 +574,24 @@ font-size: 14px;
   }
 }
 
+.notification {
+  /* background-color: #555;
+  color: white;
+  text-decoration: none; */
+  /* padding: 15px 26px; */
+  position: relative;
+}
+
+
+
+.notification .badge {
+  position: absolute;
+  top: -2px;
+  right: -10px;
+  padding: 4px 8px;
+  border-radius: 100%;
+  background-color: #222121;
+  color: white;
+}
 
 
